@@ -112,6 +112,10 @@ Data exploration
   state from the originating display.  This way, you can easily unfold
   linked elements simply by clicking `Disp *' again and again.
 
+- The `New Display' menu is maintained separately for each debugger
+  type.  That is, you can have different menus for GDB, DBX, Perl,
+  etc.  There are also suitable defaults for each of these.
+
 - Anonymous unions are no longer prefixed by `='.
 
 - `Examine Memory' also works for Solaris DBX.
